<resources>
    <string name="app_name">Catalogue</string>
    <string name="Msg1">Welcome to Catalogue</string>
    <string name="Msg2">We help you take care everything</string>
    <string name="Msg3">Use Now</string>
    <string name="Msg4">Login</string>
    <string name="Msg5">Catalogue</string>
    <string name="Msg6">Sign in with Google</string>
    <string name="Msg7">My Tasks</string>
    <string name="Msg8">Add</string>
    <string name="Msg9">Task</string>
    <string name="Msg10">Enter Task</string>
    <string name="Msg11">Description</string>
    <string name="Msg12">Description</string>
    <string name="Msg13">save</string>
    <string name="Msg16">Catalogue</string>
    <string name="Msg17">Task</string>
    <string name="Msg18">Go</string>
    <string name="Msg19">WishList</string>

    <string name="MyDiary">My Diary</string>

    <string name="MyWishList">My WishList</string>
    <string name="NewWish">New</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



</resources>